# TA_demoqa_tform

./: pyproject.toml  requirements.txt
pages/: BasePage.py
tests/: conftest.py  test_form.py
utils/: locators.py  t_random_data.py
