[tool.poetry]
name = "ta-demoqa-tform"
version = "0.1.0"
description = ""
authors = ["zastasja <anastasia_zh@bk.ru>"]
readme = "README.md"
packages = [{include = "ta_demoqa_tform"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
selenium = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
